// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSubmit renders expected elements 1`] = `
<Button
  id="test"
  type="primary"
/>
`;

exports[`FormSubmit renders expected elements when is changed returns false 1`] = `
<Button
  id="test"
  type="tertiary"
/>
`;
